# FinSight_App

./: .env.backup  CLAUDE.md  Dockerfile  PROJECT.md  README.md  api.py  app.py  architecture.md  docker-compose.yml  fix_mcp_setup.sh  pyproject.toml  requirements.txt  setup_and_run.py  skills-lock.json  supervisord.conf  test.py
.claude/: settings.json
.streamlit/: config.toml
agent/: __init__.py  agent.py  agents_workflow.py  architecture.md  graph.py  state.py
agent/nodes/: __init__.py  analyst.py  analysts.py  composer.py  crypto.py  fetcher.py  fund_manager.py  researchers.py  risk_manager.py  router.py  trader.py
datasources/: __init__.py  api_clients.py  mcp_client.py  models.py
evaluation/: __init__.py  metrics.py
infrastructure/: __init__.py  logging.py  memory_manager.py  memory_policy.py  memory_types.py  postgres_ltm.py  postgres_summaries.py  query_classifier.py  redis_stm.py  run_cache.py  validity.py
mcp/: manager.py
mcp_connection/: manager.py  startup.py
memory/: manager.py
rag/: embeddings.py  fusion.py  qdrant_client.py
tests/: test_api.py  test_api_clients.py  test_app_startup.py  test_e2e.py  test_evaluation.py  test_graph_routing.py  test_ltm_freshness.py  test_mcp_integration.py  test_mcp_servers.py  test_memory_integration.py  test_memory_system.py  test_qdrant_rag.py  test_routing.py  test_single_analysts.py
tools/: answer.py  async_utils.py  crypto_resolver.py  mcp_bridge.py  mcp_router.py  query_parser.py  smart_formatter.py  time_parser.py  tools.py
ui/: skeleton.py  styles.css
utils/: cache.py  config.py  logging.py
(+14 files in other folders)
